--- a/AlternativePocker/AlternativePocker.vcxproj
+++ b/AlternativePocker/AlternativePocker.vcxproj
@@ -128,6 +128,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AlternativePocker.cpp" />
+    <ClCompile Include="Deal.cpp" />
+    <ClCompile Include="GamePlay.cpp" />
+    <ClCompile Include="Player.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Card.h" />
+    <ClInclude Include="Deal.h" />
+    <ClInclude Include="GamePlay.h" />
+    <ClInclude Include="GlobalConstants.h" />
+    <ClInclude Include="GlobalEnums.h" />
+    <ClInclude Include="GlobalTypes.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
