--- a/AlternativePocker/AlternativePocker.vcxproj
+++ b/AlternativePocker/AlternativePocker.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AlternativePocker.cpp" />
+    <ClCompile Include="Card.cpp" />
     <ClCompile Include="Deal.cpp" />
     <ClCompile Include="GamePlay.cpp" />
     <ClCompile Include="Player.cpp" />
